--- a/style.css
+++ b/style.css
@@ -109,49 +109,11 @@
 }
 
 .icons {
-
   font-size: 30px;
   display: flex;
-  margin-left: 60px;
-  margin-top: 50px;
-  gap: 50px;
+  margin:50px 32px;
+  gap: 20px;
   cursor: pointer;
-}
-
-.icons .fblogo {
-  justify-content: center;
-  display: flex;
-  align-items: center;
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-
-}
-
-.icons .twitterlogo {
-  justify-content: center;
-  display: flex;
-  align-items: center;
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-}
-
-.icons .instalogo {
-  justify-content: center;
-  display: flex;
-  align-items: center;
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-}
-
-.icons :hover {
-  transform: scale(1.2);
-  transition: 0.2s;
-  background-color: #62BAA8;
-  background: #62BAA8;
-
 }
 
 .aboutcontact {
@@ -251,7 +213,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid;
 }
 .portfolioheading p {
 
@@ -269,9 +230,8 @@
 .project
 {
   width: 100%;
-  border: 1px solid white;
-  height: 700px;
-  margin-top: 200px;
+  height: 500px;
+  margin-top: 100px;
   display: flex;
   justify-content: center;
   text-align: center;
@@ -281,7 +241,6 @@
 
 .p1-text{
   width: 50%;
-  border: 1px solid green;
   display: flex;
   justify-content:center;
   text-align: start;
@@ -314,13 +273,18 @@
 
 .p1-img{
   width: 50%;
-  border: 1px solid red;
+  display: flex;
+  justify-content: center;
+}
+.p1-img img{
+  width: 90%;
+  object-fit: contain;
+  cursor: pointer;
 }
 /* projext 2 */
 
 .p2-text{
   width: 50%;
-  border: 1px solid green;
   display: flex;
   justify-content:center;
   text-align: start;
@@ -353,14 +317,19 @@
 
 .p2-img{
   width: 50%;
-  border: 1px solid red;
+  display: flex;
+  justify-content: center;
+}
+.p2-img img{
+  width: 90%;
+  object-fit: contain;
+  cursor: pointer;
 }
 
 /* project 3 */
 
 .p3-text{
   width: 50%;
-  border: 1px solid green;
   display: flex;
   justify-content:center;
   text-align: start;
@@ -393,14 +362,19 @@
 
 .p3-img{
   width: 50%;
-  border: 1px solid red;
+  display: flex;
+  justify-content: center;
+}
+.p3-img img{
+  width: 90%;
+  object-fit: contain;
+  cursor: pointer;
 }
 
 /* project 4 */
 
 .p4-text{
   width: 50%;
-  border: 1px solid green;
   display: flex;
   justify-content:center;
   text-align: start;
@@ -433,14 +407,19 @@
 
 .p4-img{
   width: 50%;
-  border: 1px solid red;
+  display: flex;
+  justify-content: center;
+}
+.p4-img img{
+  width: 90%;
+  object-fit: contain;
+  cursor: pointer;
 }
 
 /* project 5 */
 
 .p5-text{
   width: 50%;
-  border: 1px solid green;
   display: flex;
   justify-content:center;
   text-align: start;
@@ -473,5 +452,137 @@
 
 .p5-img{
   width: 50%;
-  border: 1px solid red;
+  display: flex;
+  justify-content: center;
+}
+.p5-img img{
+  width: 90%;
+  object-fit: contain;
+  cursor: pointer;
+}
+
+/* project 6 */
+
+.p6-text{
+  width: 50%;
+  display: flex;
+  justify-content:center;
+  text-align: start;
+  flex-direction: column;
+}
+
+.p6-text h6{
+  font-size:15px;
+  letter-spacing: 5px;
+  color: rgba(255, 255, 255, 0.6);
+  margin-bottom: 20px;
+  font-weight: 10px;
+}
+
+.p6-text h1 {
+  font-weight: 500;
+  font-size:30px;
+  margin-bottom: 20px;
+}
+.p6-text p{
+  font-size:15px;
+  letter-spacing: 1px;
+  color: rgba(255, 255, 255, 0.6);
+  margin-bottom: 20px;
+}
+.p6-text a{
+  text-decoration: none;
+  color: #62BAA8;
+}
+
+.p6-img{
+  width: 50%;
+  display: flex;
+  justify-content: center;
+}
+.p6-img img{
+  width: 90%;
+  object-fit: contain;
+  cursor: pointer;
+}
+
+
+/* CONTACT */
+.contactwrapper{
+  width: 100%;
+  margin: 50px 0px;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+
+/* SOCAIL LINKS */
+.sm a{
+  margin: 0 20px;
+  width: 50px;
+  height: 50px;
+  background-color: #ccc;
+  display: inline-block;
+  border-radius: 24px;
+  margin-bottom: 60px;
+  overflow: hidden;
+  font-size: 28px;
+  transition: .3s linear;
+  position: relative;
+}
+.sm a:hover{
+  transform: scale(1.3);
+  border-radius: 50%;
+}
+
+.sm a i::before{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-size: 200% 200%;
+  background-position: 75% 75%;
+  top: 0;
+  left: 0;
+  line-height: 50px;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: background .5s linear;
+}
+
+.sm a:hover i::before{
+  background-position: 0% 0%;
+}
+
+.fa-twitter::before{
+  background-image: linear-gradient(135deg,#1da1f2 30%,#0a3d62 50%);
+}
+.fa-facebook-f::before{
+  background-image: linear-gradient(135deg,#3b5998 30%,#0a3d62 50%);
+}
+
+.fa-instagram::before{
+  background-image: linear-gradient(135deg,#c32aa3 30%,#0a3d62 50%);
+}
+
+.contactcontact h1{
+  font-weight: 1000;
+  font-size:30px;
+  margin-bottom: 20px;
+}
+.contactcontact h2{
+  font-weight: 100;
+  font-size:30px;
+  margin-bottom: 60px;
+}
+.contacttext p{
+
+font-size:15px;
+letter-spacing: 1px;
+color: rgba(255, 255, 255, 0.6);
+margin-bottom: 20px;
 }
